--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Interactive BB</title>
     <meta charset="UTF-8">
@@ -25,5 +25,8 @@
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <!-- Load our React component. -->
 <script src="js/bbComponents.jsx" type="text/babel"></script>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
 </body>
 </html>
